<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="channel.all.it.mix.colorme.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/back_color">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/color_hands" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_me"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.29"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/color_xml"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:onClick="submit_xml"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/color_java"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:onClick="submit_java"/>

</LinearLayout>
